- SERVER-4025: segv in V8 when certain special objects (e.g. DBCollection) are converted from JS to BSON - SERVER-445: cleaner code in v8